tests/fixtures/pass/modules/module_state_shared_aliases_vm.walrus
import "../../modules/edge_counter.walrus" as a;
import "../../modules/edge_counter.walrus" as b;

println(a.get());
a.inc();
println(b.get());
b.inc();
println(a.get());
