tests/fixtures/fail/module_circular_import.walrus
import "../modules/cycle/a.walrus" as cycle;
